--- a/super-schedule-api/pom.xml
+++ b/super-schedule-api/pom.xml
@@ -69,5 +69,20 @@
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
         </dependency>
+
+        <dependency>
+            <groupId>super-schedule</groupId>
+            <artifactId>super-schedule-business</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>super-schedule</groupId>
+            <artifactId>super-schedule-model</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+
+
     </dependencies>
 </project>
